Added styles.css to the bundle

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -48,6 +48,7 @@
     gap: 0.5em;
     flex-wrap: wrap;
     overflow: hidden;
+    color: var(--text-01, #161616);
 
     &__chip {
       cursor: pointer;
