Added stories | Fixed style bugs | Setup Chromatic CI

--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -36,11 +36,11 @@
     background: #2f8331;
   }
 
-  &-warning {
+  &-warn {
     background: #b59229;
   }
 
-  &-error {
+  &-danger {
     background: #781a24;
   }
 }
